# char

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LEGAL_REVIEW_2026_03.md  README.md  Taskfile.yaml  dprint.json  openstatus.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml
.github/scripts/: humanizer-check.mjs  slop-check.mjs
.github/workflows/: blog-check.yml  blog-slop-check.yml  changelog.yaml  desktop_cd.yaml  desktop_ci.yaml  desktop_publish.yaml  devin_explore_issues.yaml  devin_humanizer_check.yaml  devin_triage_issues.yaml  devin_update_docs.yaml  devin_weekly_blog.yaml  fmt.yaml  local_stt_e2e.yaml
apps/api/: AGENTS.md  Cargo.toml  fly.toml  openapi.gen.json
apps/bot/: fly.toml
apps/chrome/: README.md  package.json  vitest.config.ts  wxt.config.ts
apps/chrome-extension/: background.js  content.js  manifest.json
apps/cli/: Cargo.toml
apps/cli/src/: app.rs  audio_drop.rs  entry.rs  entry_ui.rs  error.rs  event.rs  frame.rs  main.rs  terminal.rs  textarea_input.rs  theme.rs  ui.rs
apps/cli/src/commands/: auth.rs  batch.rs  cactus_server.rs  desktop.rs  entry.rs  mod.rs  tui.rs
apps/cli/src/commands/batch/: mod.rs
apps/cli/src/commands/listen/: app.rs  mod.rs  runtime.rs
apps/cli/src/commands/model/: mod.rs  runtime.rs  settings.rs
apps/desktop/: package.json  vite.config.ts
apps/k6/: package.json
apps/mobile/: .gitignore  build-rust.sh
apps/slack-internal/: fly.toml  manifest.json
apps/stripe/: fly.toml
apps/web/: AGENTS.md  WEBSITE_PAGES_AUDIT.md  content-collections.ts  netlify.toml  package.json  vite.config.ts
crates/aec/: Cargo.toml
crates/agc/: Cargo.toml
crates/am/: Cargo.toml
crates/analytics/: Cargo.toml
crates/api-asset/: Cargo.toml
crates/api-asset-client/: Cargo.toml
crates/api-auth/: Cargo.toml
crates/api-calendar/: Cargo.toml
crates/api-client/: Cargo.toml  build.rs  (+1 more)
crates/api-research/: Cargo.toml
crates/api-research/assets/: research_chat.md.jinja
crates/api-research/src/mcp/: server.rs
crates/api-sync/: Cargo.toml
crates/api-sync/src/: error.rs  lib.rs  types.rs
crates/api-sync/src/routes/: blobs.rs  mod.rs  ops.rs  vaults.rs
crates/denoise/: Cargo.toml
crates/denoise/src/onnx/: denoiser.rs  mod.rs
crates/local-llm-core/: Cargo.toml
crates/local-llm-core/src/: error.rs  lib.rs  model.rs  server.rs
crates/mobile-bridge/: Cargo.toml
crates/mobile-bridge/src/: lib.rs
crates/pyannote-cloud/: Cargo.toml  build.rs
crates/transcribe-apple/: Cargo.toml  build.rs
crates/transcribe-apple/src/: bridge.rs  error.rs  lib.rs
crates/transcribe-apple/src/service/: streaming.rs
crates/transcribe-apple/swift-lib/: Package.swift
crates/transcribe-apple/swift-lib/src/: lib.swift
crates/transcribe-aws/: Cargo.toml
crates/transcribe-cactus/: Cargo.toml
crates/transcribe-cactus/src/: config.rs  error.rs
crates/transcribe-cactus/src/service/: batch.rs  mod.rs  streaming.rs
crates/transcribe-cactus/src/service/batch/: audio.rs  chunk.rs  mod.rs  response.rs  transcribe.rs
crates/transcribe-cactus/src/service/streaming/: message.rs  mod.rs  response.rs  service.rs  session.rs  tests.rs
crates/transcribe-cactus/tests/: batch.rs  live.rs
crates/transcribe-cactus/tests/common/: mod.rs
crates/transcribe-deepgram/: Cargo.toml
crates/transcribe-moonshine/: Cargo.toml
crates/transcribe-openai/: Cargo.toml
crates/transcribe-speech-analyzer/: Cargo.toml  build.rs
crates/transcribe-speech-analyzer/src/: bridge.rs  lib.rs
crates/transcribe-speech-analyzer/src/service/streaming/: mod.rs  response.rs  session.rs
crates/transcribe-speech-analyzer/swift-lib/: Package.swift
crates/transcribe-speech-analyzer/swift-lib/src/: lib.swift
crates/vad/: Cargo.toml
crates/vad-chunking/: Cargo.toml
crates/vad/benches/: vad.rs
crates/vad/data/snapshots/: silero_v6_english_1.json  silero_v6_english_2.json  silero_v6_english_3.json  silero_v6_korean_1.json  silero_v6_korean_2.json
crates/vad/src/: lib.rs  silero.rs
crates/vad/src/silero/: v6.rs
crates/vad/tests/: compare.rs
crates/whisper-local/: Cargo.toml
otel/: OBSERVABILITY.md
plugins/calendar/: Cargo.toml  build.rs
plugins/calendar/js/: bindings.gen.ts
plugins/calendar/permissions/: default.toml
plugins/calendar/permissions/autogenerated/: reference.md
plugins/calendar/permissions/schemas/: schema.json
plugins/calendar/src/: commands.rs  convert.rs  error.rs  ext.rs  fetch.rs  lib.rs
plugins/listener/: Cargo.toml
plugins/listener/js/: bindings.gen.ts
plugins/listener/src/: events.rs  lib.rs  runtime.rs
plugins/listener/src/actors/: recorder.rs
plugins/listener/src/actors/listener/: adapters.rs  mod.rs
plugins/listener/src/actors/session/: supervisor.rs
plugins/local-stt/: Cargo.toml
plugins/local-stt/js/: bindings.gen.ts
plugins/local-stt/src/: commands.rs  ext.rs  lib.rs  model.rs
plugins/local-stt/src/server/: internal2.rs  internal3.rs  mod.rs  supervisor.rs
plugins/notification/: Cargo.toml
plugins/notification/js/: bindings.gen.ts
plugins/notification/src/: events.rs  handler.rs
plugins/opener2/: Cargo.toml
plugins/path2/: Cargo.toml
plugins/settings/: Cargo.toml  build.rs
plugins/settings/js/: bindings.gen.ts
plugins/settings/permissions/: default.toml
plugins/settings/permissions/autogenerated/: reference.md
plugins/settings/permissions/schemas/: schema.json
plugins/settings/src/: commands.rs  error.rs  ext.rs  keychain.rs  lib.rs  runtime.rs  state.rs
plugins/settings/src/global/: path.rs
plugins/shortcut/: Cargo.toml  build.rs  package.json
plugins/shortcut/assets/: keyboard-shortcuts.mdx.jinja
plugins/shortcut/js/: bindings.gen.ts
plugins/shortcut/permissions/: default.toml
plugins/shortcut/permissions/autogenerated/: reference.md
plugins/shortcut/permissions/autogenerated/commands/: get_all_shortcuts.toml
plugins/shortcut/permissions/schemas/: schema.json
plugins/shortcut/src/: commands.rs  doc.rs  lib.rs  registry.rs  types.rs
scripts/: download_releases.sh  info.sh  package.json  pyproject.toml  swap.sh  yabai.sh
(+1470 files in other folders)
