[package]
name = "api-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-supabase-auth = { workspace = true }

utoipa = { workspace = true }

axum = { workspace = true }
sentry = { workspace = true }
tracing = { workspace = true }

serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
