[package]
name = "local-llm-core"
version = "0.1.0"
edition = "2024"

[features]
specta = ["dep:specta"]

[dependencies]
hypr-file = { workspace = true }
hypr-gguf = { workspace = true }
hypr-lmstudio = { workspace = true }

dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

specta = { workspace = true, optional = true }
