[package]
name = "mobile-bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "staticlib"]
name = "mobile_bridge"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
hypr-tiptap = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uniffi = { version = "0.29", features = ["cli"] }
