[package]
name = "pyannote-cloud"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true, features = ["json"] }
url = { workspace = true }

serde = { workspace = true, features = ["derive"] }
specta = { workspace = true, features = ["derive"] }

[dev-dependencies]
hypr-data = { workspace = true }

reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["rt", "macros"] }
