[package]
name = "transcribe-aws"
version = "0.1.0"
edition = "2024"

[dev-dependencies]

[dependencies]
hypr-audio-utils = { workspace = true }
owhisper-config = { workspace = true }
owhisper-interface = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

async-stream = { workspace = true }
axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tracing = { workspace = true }

aws-config = "1.8.3"
aws-sdk-transcribestreaming = "1.80.0"
aws-smithy-runtime-api = "1.8.5"
aws-smithy-types = "1.3.2"
