[package]
name = "transcribe-deepgram"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
hypr-audio-utils = { workspace = true }
hypr-data = { workspace = true }
owhisper-client = { workspace = true }
rodio = { workspace = true }

[dependencies]
axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
futures-util = { workspace = true }
hypr-audio-utils = { workspace = true }
owhisper-config = { workspace = true }
owhisper-interface = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

deepgram = { workspace = true, default-features = false, features = ["listen"] }
