[package]
name = "transcribe-moonshine"
version = "0.1.0"
edition = "2024"

[features]
default = []
cuda = ["hypr-moonshine/cuda"]
coreml = ["hypr-moonshine/coreml"]
directml = ["hypr-moonshine/directml"]

[dependencies]
axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
hypr-moonshine = { workspace = true }
hypr-vad-ext = { workspace = true }
hypr-ws-utils = { workspace = true }
owhisper-config = { workspace = true }
owhisper-interface = { workspace = true }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
