[package]
name = "transcribe-openai"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, features = ["ws"] }
bytes = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[dev-dependencies]
