[package]
name = "transcribe-speech-analyzer"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable the Swift+SpeechAnalyzer integration (requires macOS 26 SDK).
speech-analyzer = []


[target.'cfg(target_os = "macos")'.build-dependencies]
swift-rs = { workspace = true, features = ["build"] }

[target.'cfg(target_os = "macos")'.dependencies]
swift-rs = { workspace = true }

[dependencies]
hypr-audio-utils = { workspace = true }
hypr-ws-utils = { workspace = true }
owhisper-interface = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

axum = { workspace = true, features = ["ws"] }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
tower = { workspace = true }
tracing = { workspace = true }
