[package]
name = "tauri-plugin-calendar"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-calendar"
description = ""

[dependencies]
hypr-api-client = { workspace = true }
hypr-apple-calendar = { workspace = true, features = ["specta"] }
hypr-calendar-interface = { workspace = true }
hypr-google-calendar = { workspace = true, features = ["specta"] }
hypr-outlook-calendar = { workspace = true, features = ["specta"] }

tauri = { workspace = true, features = ["test"] }
tauri-plugin-auth = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, features = ["chrono"] }
thiserror = { workspace = true }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-apple-contact = { workspace = true }
objc2-foundation = { workspace = true, features = ["NSPredicate"] }
