[package]
name = "tauri-plugin-listener"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-listener"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
serde_json = { workspace = true }
specta-typescript = { workspace = true }

[dependencies]
hypr-aec = { workspace = true }
hypr-audio = { workspace = true }
hypr-audio-utils = { workspace = true }
hypr-device-monitor = { workspace = true }
hypr-host = { workspace = true }
hypr-language = { workspace = true }
hypr-vad-ext = { workspace = true }
tauri-plugin-fs-sync = { workspace = true }

owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }
tauri-plugin-local-stt = { workspace = true }
tauri-plugin-settings = { workspace = true }
tauri-plugin-tray = { workspace = true }

tauri = { workspace = true, features = ["specta", "test"] }

specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

hound = { workspace = true }

hypr-supervisor = { workspace = true }
ractor = { workspace = true, features = ["async-trait"] }

futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }

sentry = { workspace = true }
