[package]
name = "tauri-plugin-local-stt"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-local-stt"
description = ""

[features]
default = []
whisper-cpp = ["dep:hypr-transcribe-whisper-local", "dep:hypr-whisper-local"]
coreml = ["whisper-cpp", "hypr-transcribe-whisper-local/coreml", "hypr-transcribe-moonshine/coreml"]
directml = ["whisper-cpp", "hypr-transcribe-whisper-local/directml", "hypr-transcribe-moonshine/directml"]
cuda = ["whisper-cpp", "hypr-transcribe-whisper-local/cuda", "hypr-transcribe-moonshine/cuda"]
hipblas = ["whisper-cpp", "hypr-transcribe-whisper-local/hipblas"]
openblas = ["whisper-cpp", "hypr-transcribe-whisper-local/openblas"]
metal = ["whisper-cpp", "hypr-transcribe-whisper-local/metal"]
vulkan = ["whisper-cpp", "hypr-transcribe-whisper-local/vulkan"]
openmp = ["whisper-cpp", "hypr-transcribe-whisper-local/openmp"]
load-dynamic = ["whisper-cpp", "hypr-transcribe-whisper-local/load-dynamic"]

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
hypr-language = { workspace = true, features = ["whisper"] }

dirs = { workspace = true }
reqwest = { workspace = true }
specta-typescript = { workspace = true }

[dependencies]
hypr-am = { workspace = true }
hypr-download-interface = { workspace = true }
hypr-file = { workspace = true }
hypr-host = { workspace = true }
hypr-language = { workspace = true, features = ["whisper"] }
hypr-transcribe-moonshine = { workspace = true }

hypr-transcribe-whisper-local = { workspace = true, optional = true }
hypr-whisper-local = { workspace = true, optional = true }
hypr-whisper-local-model = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

tauri-plugin-settings = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-sidecar2 = { workspace = true }

dirs = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }

axum = { workspace = true, features = ["ws"] }
tower-http = { workspace = true, features = ["cors", "trace"] }

backon = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

hypr-supervisor = { workspace = true }
port_check = "0.3.0"
ractor = { workspace = true, features = ["async-trait"] }
