[package]
name = "tauri-plugin-notification"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-notification"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
hypr-notification = { workspace = true, features = ["legacy"] }

tauri-plugin-analytics = { workspace = true }
tauri-plugin-windows = { workspace = true }

serde = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

tauri = { workspace = true, features = ["test"] }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

apalis = { workspace = true }
