[package]
name = "tauri-plugin-opener2"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-opener2"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
specta = { workspace = true }
tauri = { workspace = true, features = ["test"] }
tauri-plugin-opener = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

thiserror = { workspace = true }
